# smart_agri_system

./: CMakeLists.txt  README.md  arch.txt  humidity_esp32_mqtt.ino  smart.code-workspace
components/htu21d/: CMakeLists.txt  htu21d.c  htu21d.h
main/: CMakeLists.txt  app_config.h  display_task.c  display_task.h  idf_component.yml  main.c  mqqt_task.c  mqqt_task.h  mqtt_task.c  mqtt_task.h  sensor_task.c  sensor_task.h  wifi_manager.c  wifi_manager.h
